# pandora_navigation

./: .gitignore  .jenkins.yml  README.md
pandora_costmap/: CMakeLists.txt  package.xml  setup.py
pandora_costmap/config/: filter.cfg  range_to_point_cloud_converter.yaml
pandora_costmap/docs/html/: ____init_____8py.html  ____init_____8py.js  annotated.html  annotated.js  classes.html  classpandora__costmap_1_1map__patch_1_1_map_patcher-members.html  classpandora__costmap_1_1map__patch_1_1_map_patcher.html  classpandora__costmap_1_1map__patch_1_1_map_patcher.js  classpandora__costmap_1_1map__patch_1_1_mock_map_patcher-members.html  classpandora__costmap_1_1map__patch_1_1_mock_map_patcher.html  classpandora__costmap_1_1obstacle_1_1_obstacle-members.html  classpandora__costmap_1_1obstacle_1_1_obstacle.html  classpandora__costmap_1_1obstacle_1_1_obstacle.js  files.html  files.js  functions.html  functions_func.html  functions_vars.html  index.html  map__patch_8py.html  map__patch_8py.js  map__patch__params_8py.html  map__patch__params_8py.js  map__utils_8py.html  map__utils_8py.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacepandora__costmap.html  namespacepandora__costmap.js  namespacepandora__costmap_1_1map__patch.html  namespacepandora__costmap_1_1map__patch.js  namespacepandora__costmap_1_1map__patch__params.html  namespacepandora__costmap_1_1map__patch__params.js  namespacepandora__costmap_1_1map__utils.html  namespacepandora__costmap_1_1map__utils.js  namespacepandora__costmap_1_1obstacle.html  namespacepandora__costmap_1_1obstacle.js  namespaces.html  namespaces.js  (+4 more)
pandora_costmap/docs/latex/: ____init_____8py.tex  annotated.tex  classpandora__costmap_1_1map__patch_1_1_map_patcher.tex  doxygen.sty  files.tex  refman.tex  (+12 more)
pandora_costmap/launch/: map_patch.launch  range_to_point_cloud_converter.launch  voxel_layer.launch
pandora_costmap/scripts/: map_patch.py  map_patch_params.py
pandora_costmap/src/: point_cloud_cropper.cpp  range_to_point_cloud_converter.cpp
pandora_exploration/: CMakeLists.txt  package.xml
pandora_exploration/config/: costmap_params.yaml  coverage_costmap_params.yaml  exploration_controller_params.yaml  explore_costmap_params.yaml  frontier_exploration_params.yaml
pandora_exploration/launch/: explorer.launch
pandora_exploration/src/: alignment_cost_function.cpp  distance_cost_function.cpp  exploration_controller.cpp  exploration_controller_node.cpp  frontier_goal_selector.cpp  map_frontier_search.cpp  navfn_frontier_path_generator.cpp  navfn_service_frontier_path_generator.cpp  size_cost_function.cpp  visited_cost_function.cpp
pandora_exploration/test/: CMakeLists.txt  exploration_caller.py  export_costmap.cpp  frontier_selector_test.cpp  frontiers_test.launch
pandora_local_planner/: CMakeLists.txt  package.xml
pandora_monstertruck_2dnav/: CMakeLists.txt  package.xml
pandora_monstertruck_2dnav/config/: base_global_planner_params.yaml  config.rviz  costmap_converter_params.yaml  four_wheel_steer.mprim  global_costmap_params.yaml  local_costmap_params.yaml  monstertruck_stdr.yaml  monstertruck_stdr_robot_description.xml  monstertruck_stdr_robot_description.yaml  move_base.yaml  teb_base_local_planner_params.yaml  teb_local_planner_params.yaml
pandora_monstertruck_2dnav/launch/: ackermann_to_twist.launch  exploration.launch  frontier_exploration.launch  gmapping.launch  move_base.launch  navigation_goals_loop.launch  pandora_exploration.launch  robot.launch  robot_pose_ekf.launch  rviz.launch  sim_bringup.launch  simulation.launch  stdr.launch
pandora_monstertruck_2dnav/matlab/: genmprim_ackermann.m  genmprim_four_wheel_steer.m
pandora_monstertruck_2dnav/scripts/: fws_cmd_vel_filter.py  odom_to_base_tf_publisher.py  scan_frame_remapper.py  simple_exploration_client.py
pandora_monstertruck_2dnav/src/: ackermann_to_twist.cpp  ackermann_to_twist_node.cpp  navigation_goals_loop_node.cpp
pandora_move_back_recovery/: CMakeLists.txt  package.xml  pandora_move_back_plugin.xml
pandora_move_back_recovery/src/: pandora_move_back_recovery.cpp
pandora_move_base/: CMakeLists.txt  CMakeLists.txt~  package.xml
pandora_move_base/config/: MoveBase.cfg  base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
pandora_move_base/launch/: move_base.launch  move_base.launch~
pandora_move_base/scripts/: call_robot_stuck_action.py  call_robot_stuck_action.py~  mock_global_frame.py  mock_soft_map_update.py  rviz_move_base_wrapper.py  rviz_move_base_wrapper.py~
pandora_move_base/src/: move_base.cpp  move_base_node.cpp  navigation_controller.cpp
pandora_navigation/: CMakeLists.txt  README.md  interfaces.xml  package.xml  tests.cmake  unit_tests.cmake
pandora_navigation/launch/: autonomous_navigation.launch  dummy_fsm.launch  hard_test.launch  rosconsole.config  soft_test.launch
pandora_navigation/tests/: Image.cpp  dummy_fsm.cpp  move_base_client_cpp.cpp  test_utilities.cpp
pandora_navigation_common/: CMakeLists.txt  package.xml
pandora_navigation_communications/: CMakeLists.txt  package.xml
pandora_navigation_communications/msg/: victimsMsg.msg
pandora_navigation_communications/srv/: NavigationGeotiffSrv.srv  navigationMapSrv.srv  victimIdentificationSrv.srv
pandora_navigation_msgs/: CMakeLists.txt  package.xml  setup.py
pandora_navigation_msgs/action/: DoExploration.action
pandora_navigation_msgs/msg/: ArenaTypeMsg.msg
pandora_path_planner/: CMakeLists.txt  package.xml
pandora_path_planner/src/: global_path_planner.cpp  pandora_path_planner.cpp
pandora_target_selector/: CMakeLists.txt  package.xml
pandora_target_selector/launch/: target_selector.launch
pandora_target_selector/src/: closest_unexplored_target_selector.cpp  exploration_target_selector.cpp  target_selector.cpp  target_selector_controller.cpp  target_selector_node.cpp  victim_target_selector.cpp
target_selector_communications/: CMakeLists.txt  package.xml
target_selector_communications/action/: SelectTarget.action
(+467 files in other folders)
