<?xml version="1.0"?>
<package format="2">
  <name>pandora_costmap</name>
  <version>0.0.0</version>
  <description>Custom costmap layers, for autonomous navigation</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
