<?xml version="1.0"?>
<package format="2">
  <name>pandora_costmap</name>
  <version>0.1.0</version>
  <description>Custom costmap layers, for autonomous navigation</description>

  <maintainer email="dimkirts@gmail.com">Dimitrios Kirtsios</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>rospy</depend>
  <depend>python-numpy</depend>
  <depend>pandora_data_fusion_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>roslint</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
