<package>
  <name>pandora_exploration</name>
  <version>0.0.0</version>
  <description>Exploration controller for PANDORA UGV</description>
  
  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pandora_navigation_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pandora_navigation_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nav_core</run_depend>

  
  <export>
  </export>
</package>
