<package format="2">
  <name>pandora_exploration</name>
  <version>0.0.0</version>
  <description>Exploration controller for PANDORA UGV</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>pandora_navigation_msgs</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nav_core</depend>
  <depend>angles</depend>

  <export>
  </export>
</package>
