<package format="2">
  <name>pandora_move_base</name>
  <version>0.0.0</version>
  <description>Navigation controller for PANDORA UGV.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>actionlib</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <!--These deps aren't strictly needed, but the default params require them to work-->
  <depend>base_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>navfn</depend>
  <depend>clear_costmap_recovery</depend>
  <depend>rotate_recovery</depend>

  <export>
  </export>
</package>
