<?xml version="1.0"?>
<package>
  <name>pandora_navigation</name>
  <version>0.1.0</version>
  <description>Containts algorithms for autonomous navigation.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <run_depend>pandora_navigation_communications</run_depend>
  <run_depend>target_selector_communications</run_depend>
  <run_depend>pandora_navigation_common</run_depend>
  <run_depend>pandora_target_selector</run_depend>
  <run_depend>pandora_path_planner</run_depend>
  <run_depend>pandora_move_base</run_depend>
    

  <export>
    <metapackage/>
  </export>  
</package>
