<?xml version="1.0"?>
<package format="2">
  <name>pandora_navigation</name>
  <version>0.1.0</version>
  <description>Containts algorithms for autonomous navigation.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pandora_navigation_msgs</exec_depend>
  <exec_depend>pandora_move_base</exec_depend>
  <exec_depend>pandora_costmap</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
