<?xml version="1.0"?>
<package>
  <name>pandora_navigation_communications</name>
  <version>0.0.0</version>
  <description>pandora_navigation_communications</description>
  <maintainer email="afourast@gmail.com">Afouras Triantafyllos</maintainer> 

  <license>BSD</license>

<!--
  <url type="website">http://ros.org/wiki/stateManager_communications</url>
   <url type="bugtracker"></url> 
-->

	<buildtool_depend>catkin</buildtool_depend>

   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>


   
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
   
   <build_depend>actionlib_msgs</build_depend>
   <run_depend>actionlib_msgs</run_depend>
   
   <build_depend>geometry_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   



  <author>pandora</author>

  <export>

  </export>
</package>
