<?xml version="1.0"?>
<package>
  <name>pandora_navigation_msgs</name>
  <version>0.0.0</version>
  <description>Messages and actions used by navigation packages.</description>
  
  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
  
</package>
