<?xml version="1.0"?>
<package format="2">
  <name>pandora_navigation_msgs</name>
  <version>0.0.0</version>
  <description>Messages and actions used by navigation packages.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_navigation/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_navigation</url>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>

</package>
